Fixed overflowing of the result text

--- a/style.css
+++ b/style.css
@@ -33,11 +33,7 @@ body{
 .logMsg span{
     font-size: 20px;
     padding: 10px;
-    white-space: nowrap; /* Prevents text from wrapping */
-    overflow-x: auto;    /* Enables horizontal scrolling */
-    display: block;      /* Ensures span behaves like a block element */
-    width: 100%;        /* Adjust width as needed */
-
+ 
 }
 
 .result-screen{
@@ -48,12 +44,16 @@ body{
     justify-content: flex-end;
     border-radius: 10px;
     padding: 20px;
+    align-items: center;
     border: 3px solid ;
+    height: 100px;
 }
 .result-text{
     text-align: left;
-    padding: 5px;
     font-size: 30px;
+    white-space: nowrap; /* Prevents text from wrapping */
+    overflow-x:auto;    /* Enables horizontal scrolling */
+    overflow-y: hidden;
 }
 
 .keys-wrapper{
